rust/oxide_generator_rs/tests/ui/fail_reducer_async_reduce.stderr
error: `reduce` must not be async
  --> tests/ui/fail_reducer_async_reduce.rs:20:11
   |
20 |     async fn reduce(
   |           ^^
